--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Fetcher</title>
         <link rel="stylesheet" href="./css/style.css"/>
+        <meta charset="UTF-8">
     </head>
     <body>
         <section>
